working area and activities controller added
